traefik/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik
  namespace: kube-system
spec:
  controllerName: traefik.io/gateway-controller
